force-app/main/default/objects/PSE_Status_History__c/PSE_Status_History__c.object-meta.xml
<CustomObject>
    <label>PSE Status History</label>
    <nameField>
        <displayFormat>PSESH-{00000000}</displayFormat>
        <label>PSE Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSE Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>