force-app/main/default/objects/PSE_Status_History__c/fields/Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Changed Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>