force-app/main/default/objects/PSE_Status_History__c/fields/PSE__c.field-meta.xml
<CustomField>
    <fullName>PSE__c</fullName>
    <label>Participant Study Enrollment</label>
    <referenceTo>Participant_Study_Enrollment__c</referenceTo>
    <relationshipLabel>PSE Status Histories</relationshipLabel>
    <relationshipName>PSE_Status_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>