force-app/main/default/objects/PSE_Status_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Treatment Period Started</fullName>
            </value>
            <value>
                <fullName>Follow-Up Period Started</fullName>
            </value>
            <value>
                <fullName>Participation Complete</fullName>
            </value>
            <value>
                <fullName>Trial Complete</fullName>
            </value>
            <value>
                <fullName>Drop Out</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>